# get-art

./: LICENSE  README.md  getart.py  pyproject.toml  requirements.txt
